--- a/demo-app/manifests/workload.yaml
+++ b/demo-app/manifests/workload.yaml
@@ -46,8 +46,8 @@ spec:
       name: http
 ---
 #apiVersion: networking.k8s.io/v1beta1
-#apiVersion: extensions/v1beta1
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
+#apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     name: loki-example-app
