--- a/demo-app/manifests/workload.yaml
+++ b/demo-app/manifests/workload.yaml
@@ -45,8 +45,8 @@ spec:
       targetPort: 8080
       name: http
 ---
-#apiVersion: networking.k8s.io/v1beta1
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
+#apiVersion: extensions/v1beta1
 #apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
